# AWML

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker.sh  errors.txt  errors_4.txt  pyproject.toml  run.sh  run_entropy.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.patches/: mmengine.patch  spconv.patch
projects/PTv3/: Dockerfile  README.md  data  pyproject.toml
projects/PTv3/configs/: semseg-litept-small-v1m1-nuscenes.py  semseg-litept-small-v1m1-t4dataset.py  semseg-pt-v3m1-0-base.py  semseg-pt-v3m1-0-t4dataset.py
projects/PTv3/configs/_base_/: default_runtime.py
projects/PTv3/datasets/: __init__.py  dataloader.py  defaults.py  nuscenes.py  t4dataset.py  transform.py
projects/PTv3/engines/: defaults.py  launch.py  test.py  train.py
projects/PTv3/engines/hooks/: builder.py  evaluator.py  misc.py
projects/PTv3/libs/pointgroup_ops/: pyproject.toml  setup.py
projects/PTv3/libs/pointgroup_ops/functions/: functions.py
projects/PTv3/libs/pointops/: pyproject.toml  setup.py
projects/PTv3/libs/pointops/functions/: aggregation.py  attention.py  grouping.py  query.py  sampling.py  subtraction.py  utils.py
projects/PTv3/libs/pointops/src/attention/: attention_cuda_kernel.cu
projects/PTv3/libs/pointops/src/sampling/: sampling_cuda_kernel.cu
projects/PTv3/libs/pointrope/: pyproject.toml  setup.py
projects/PTv3/libs/pointrope/functions/: __init__.py  pointrope.py
projects/PTv3/libs/pointrope/src/: kernels.cu  pointrope.cpp
projects/PTv3/models/: __init__.py  default.py  modules.py
projects/PTv3/models/litept/: __init__.py  litept.py
projects/PTv3/models/losses/: __init__.py  lovasz.py  misc.py
projects/PTv3/models/point_prompt_training/: __init__.py  _point_prompt_training_v1m1_language_guided.py  _point_prompt_training_v1m2_decoupled.py  prompt_driven_normalization.py
projects/PTv3/models/point_transformer_v3/: point_transformer_v3m1_base.py
projects/PTv3/models/scatter/: __init__.py  functional.py
projects/PTv3/models/utils/: misc.py  structure.py
projects/PTv3/models/utils/serialization/: hilbert.py
projects/PTv3/scripts/: test.sh  train.sh
projects/PTv3/tests/: test_serialized_pooling.py
projects/PTv3/tools/: export.py  test.py  train.py
projects/PTv3/utils/: events.py  misc.py  scheduler.py  visualization.py
(+1125 files in other folders)
